# rkb2040

./: .lazy.lua  Cargo.toml  README.md  build.sh
.cargo/: config.toml
bsp/sea-picro/: Cargo.toml
bsp/sea-picro/src/: lib.rs
bsp/splinky/: Cargo.toml
bsp/splinky/src/: lib.rs
rkb2040/: Cargo.toml
rkb2040-lib/: Cargo.toml
rkb2040-lib/src/: bootloader.rs  debounce.rs  keyboard.rs  keyboards.rs  keymap.rs  lib.rs  pin.rs  pins.rs  queue.rs  runtime.rs  scan.rs  seq.rs  trrs_serial.rs
rkb2040-proc/: Cargo.toml
rkb2040-proc/src/: direct_keyboard.rs  keyboard.rs  keyboards.rs  lib.rs  matrix_keyboard.rs
rkb2040/src/: keyboards.rs  main.rs
rkb2040/src/keyboards/: skeletyl.rs  sweep2.rs
rkb2040/src/keyboards/skeletyl/: keyboard.rs  keymap.rs  runtime.rs
rkb2040/src/keyboards/sweep2/: keyboard.rs  keymap.rs  runtime.rs
