[package]
name = "rkb2040-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
rp2040-hal.workspace = true
embedded-hal.workspace = true
pio-uart.workspace = true
paste.workspace = true
usb-device.workspace = true
usbd-human-interface-device.workspace = true
rkb2040-proc.workspace = true

[lints]
workspace = true
